Import of PAJAS/XML-LibXSLT-1.70 from CPAN.
gitpan-cpan-distribution: XML-LibXSLT
gitpan-cpan-version:      1.70
gitpan-cpan-path:         PAJAS/XML-LibXSLT-1.70.tar.gz
gitpan-cpan-author:       PAJAS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         XML-LibXSLT
-version:      1.68
-version_from: LibXSLT.pm
-installdirs:  site
+--- #YAML:1.0
+name:               XML-LibXSLT
+version:            1.70
+abstract:           Interface to Gnome libxslt library
+author:
+    - Matt Sergeant
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    XML::LibXML:                   1.67
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    XML::LibXML:  1.70
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.52
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
