Import of SHLOMIF/XML-LibXSLT-1.77 from CPAN.
gitpan-cpan-distribution: XML-LibXSLT
gitpan-cpan-version:      1.77
gitpan-cpan-path:         SHLOMIF/XML-LibXSLT-1.77.tar.gz
gitpan-cpan-author:       SHLOMIF
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Interface to Gnome libxslt library'
+abstract: 'Interface to GNOME libxslt library'
 author:
   - 'Matt Sergeant'
 build_requires:
@@ -22,4 +22,4 @@ requires:
   XML::LibXML: 1.70
   strict: 0
   warnings: 0
-version: 1.76
+version: 1.77
