--- a/META.yml
+++ b/META.yml
@@ -3,23 +3,23 @@ abstract: 'Interface to GNOME libxslt library'
 author:
   - 'Matt Sergeant'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.78, CPAN::Meta::Converter version 2.132830'
+generated_by: 'ExtUtils::MakeMaker version 6.88, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: XML-LibXSLT
 no_index:
   directory:
     - t
     - inc
 requires:
-  Encode: 0
-  XML::LibXML: 1.70
-  strict: 0
-  warnings: 0
-version: 1.87
+  Encode: '0'
+  XML::LibXML: '1.70'
+  strict: '0'
+  warnings: '0'
+version: '1.88'
