--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.88, CPAN::Meta::Converter version 2.133380'
+generated_by: 'ExtUtils::MakeMaker version 6.9, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,6 +20,9 @@ no_index:
 requires:
   Encode: '0'
   XML::LibXML: '1.70'
+  perl: '5.008001'
   strict: '0'
   warnings: '0'
-version: '1.88'
+resources:
+  repository: https://bitbucket.org/shlomif/perl-xml-libxslt
+version: '1.89'
